--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-hook-form": "^7.43.9",
     "react-lazy-load": "^4.0.1",
     "react-router-dom": "^6.11.1",
     "swiper": "^9.3.0"
